<!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">VoMinh</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="description">Description:</string>
    <string name="hours_operation">Hours Operation:</string>

    <string name="name_value">Computer Vo Minh</string>
    <string name="address_value">541 / 26 Dien Bien Phu, P3, Q3, TP.HCM</string>
    <string name="phone_number_value">0838.391.232 - 0982.87.87.07</string>
    <string name="description_value">Computer Services - Production</string>
    <string name="hours_operation_value">8h30 - 18h00 (Monday - Saturday)</string>
    <string name="hours_operation_value_weekend">8h30 - 12h30 (Sunday)</string>

    <string name="banner_description">VoMinh Banner</string>
    <string name="copyright">Copyright @ 2012 - 2016</string>
    <string name="copyright_website">ViTinhVoMinh.Com</string>
</resources>
