<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.vitinhvominh.vominh.MainActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/banner_description"
        android:maxHeight="400dp"
        android:maxWidth="400dp"
        android:src="@drawable/baner_ban_laptop_da_nang" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/address" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/description" />

            <TextView
                android:id="@+id/hours_operation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/hours_operation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name_value"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/address_value" />

            <TextView
                android:id="@+id/phone_number_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/phone_number_value" />

            <TextView
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/description_value" />

            <TextView
                android:id="@+id/hours_operation_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/hours_operation_value" />

            <TextView
                android:id="@+id/hours_operation_value_weekend"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/hours_operation_value_weekend" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/copyright"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/copyright" />

        <TextView
            android:id="@+id/copyright_website"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:text="@string/copyright_website"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
